use only one generic attribute object for input and output